# primary-knowledge-system

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  manifest.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: data-contract.md  provenance.md  public-sync.md
docs/superpowers/plans/: 2026-07-16-unified-public-system.md
docs/superpowers/specs/: 2026-07-15-public-edition-github-sync-design.md  2026-07-16-unified-public-system-design.md
scripts/: import-three-subjects.ps1  release_check.py
src/pks/: __init__.py  cli.py  contracts.py  events.py  imports.py  jobs.py  materialize.py  paths.py  policy.py  projection.py  public_data.py  public_sync.py  repositories.py  review.py  service.py  state.py  subject_adapters.py
subjects/chinese/entities/: classical-work-bai-ju-yi-37.json  classical-work-bai-ju-yi-38.json  classical-work-bai-ju-yi-39.json  classical-work-beichao-chi-le-ge.json  classical-work-du-fu-25.json  classical-work-du-fu-26.json  classical-work-du-fu-27.json  classical-work-du-fu-28.json  classical-work-du-mu-45.json  classical-work-du-mu-46.json  classical-work-du-mu-47.json  classical-work-fan-cheng-da-61.json  classical-work-fan-cheng-da-62.json  classical-work-fan-zhong-yan-49.json  classical-work-gao-ding-75.json  classical-work-gao-shi-24.json  classical-work-gong-zi-zhen-74.json  classical-work-han-yu-34.json  classical-work-he-zhi-zhang-hui-xiang-ou-shu.json  classical-work-he-zhi-zhang-yong-liu.json  classical-work-hu-ling-neng-40.json  classical-work-jia-dao-44.json  classical-work-li-bai-18.json  classical-work-li-bai-19.json  classical-work-li-bai-20.json  classical-work-li-bai-21.json  (+709 more)
tests/: test_cli.py  test_cli_repository.py  test_contracts.py  test_embedded_baseline.py  test_end_to_end.py  test_events.py  test_jobs.py  test_learn.py  test_materialize.py  test_paths.py  test_policy.py  test_projection.py  test_public_adapter.py  test_public_data.py  test_public_deletion.py  test_public_sync.py  test_query.py  test_release_check.py  test_repositories.py  test_repository_identity.py  test_repository_import.py  test_review.py  test_state.py  test_subject_adapters.py
(+1998 files in other folders)
