[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primary-knowledge-system"
version = "0.3.0"
description = "Primary education knowledge engine with an embedded reviewed baseline"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.11"
keywords = ["knowledge-graph", "obsidian", "education", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
pks = "pks.cli:main"

[project.urls]
Homepage = "https://github.com/YDB003/primary-knowledge-system"
Repository = "https://github.com/YDB003/primary-knowledge-system"
Issues = "https://github.com/YDB003/primary-knowledge-system/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
